; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movep_32_er.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_movep_32_er.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_movep_32_er() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @EA_AY_DI_32()
  store i64 %2, i64* %1, align 8
  %3 = load i64, i64* %1, align 8
  %4 = call i32 @m68ki_read_8(i64 %3)
  %5 = shl i32 %4, 24
  %6 = load i64, i64* %1, align 8
  %7 = add nsw i64 %6, 2
  %8 = call i32 @m68ki_read_8(i64 %7)
  %9 = shl i32 %8, 16
  %10 = add nsw i32 %5, %9
  %11 = load i64, i64* %1, align 8
  %12 = add nsw i64 %11, 4
  %13 = call i32 @m68ki_read_8(i64 %12)
  %14 = shl i32 %13, 8
  %15 = add nsw i32 %10, %14
  %16 = load i64, i64* %1, align 8
  %17 = add nsw i64 %16, 6
  %18 = call i32 @m68ki_read_8(i64 %17)
  %19 = add nsw i32 %15, %18
  store i32 %19, i32* @DX, align 4
  ret void
}

declare dso_local i64 @EA_AY_DI_32(...) #1

declare dso_local i32 @m68ki_read_8(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
